Moved styles and scripts to partial views.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -4,19 +4,14 @@
   <title>Vapid Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Work+Sans:400,800" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/site.css">
+  {{> styles}}
 </head>
 <body>
 
   {{> nav}}
 
   {{#section full_page}}
-  <header class="header fill-background" style="background: url({{background_image type=image tag=false required=false}}) no-repeat;">
+  <header class="header fill-background" style="background: url({{background_image type=image tag=false required=false}});">
     <h1><span>{{title label="Title"}}</span></h1>
   </header>
   {{/section}}
@@ -25,21 +20,21 @@
   <section>
     <div class="container">
       <div class="text-center">
-        <h1>{{text}}</h1>
-        <h2>{{description}}</h2>
+        <h1 class="p-5">{{text}}</h1>
+        <h2 class="p-5">{{description}}</h2>
       </div>
     </div>
   </section>
   {{/section}}
 
   {{#section variant}}
-  <section class="fill-background inverse" style="background: url({{background_image type=image tag=false required=false}}) no-repeat;">
+  <section class="fill-background inverse" style="background: url({{background_image type=image tag=false required=false}});">
     <div class="container">
       <div class="row">
         {{#section variations multiple=true}}
         <div class="col">
-          <h2>{{title}}</h2>
-          <p>{{description}}</p>
+          <h1 class="p-5">{{title}}</h1>
+          <p>{{description long=true}}</p>
         </div>
         {{/section}}
       </div>
@@ -52,11 +47,13 @@
     <div class="container">
       <div class="row">
         {{#section highlights multiple=true}}
-        <div class="col-4">
-          <img src="{{image type=image tag=false required=false}}" style="width:100%;"> 
-          <h3>{{title}}</h3>
-          <p>{{description}}</p>
-        </div>
+          <div class="col-4">
+            <img src="{{image type=image tag=false required=false}}" class="rounded img-thumbnail" style="width:100%;">
+            <div class="p-4">
+                <h2 class="p-2">{{title}}</h2>
+                <p>{{description}}</p>
+            </div>
+          </div>
         {{/section}}
       </div>
     </div>
@@ -65,6 +62,6 @@
 
   {{> footer}}
 
-  <script src="/javascripts/site.js"></script>
+  {{> scripts}}
 </body>
 </html>
