Switched variations description type to html

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -20,6 +20,7 @@
   <section>
     <div class="container">
       <div class="text-center">
+        <img src="{{image type=image tag=false required=false}}">
         <h1 class="p-5">{{text}}</h1>
         <h2 class="p-5">{{description}}</h2>
       </div>
@@ -34,7 +35,7 @@
         {{#section variations multiple=true}}
         <div class="col">
           <h1 class="p-5">{{title}}</h1>
-          <p>{{description long=true}}</p>
+          <p>{{description type=html}}</p>
         </div>
         {{/section}}
       </div>
